feat: Implement product detail page with cart functionality
- Created ProductDetailClient component to display product details, images, and variants.
- Added functionality for selecting color and size, and handling add to cart actions.
- Integrated session management to ensure users are logged in before adding items to the cart.
- Developed ProductPage to fetch product data from the database using Prisma.
- Enhanced ProductosPage to list all active products with their details and stock availability.
- Built Navbar component for site navigation, including user session management and cart count display.
- Established SessionProvider for managing user sessions across the application.
- Created ConfirmModal component for user confirmations on actions.
- Developed CartContext for managing cart state and refreshing cart count.
- Added hooks for fetching cart count and managing user authentication.
- Implemented authentication logic using NextAuth with credentials provider.
- Set up middleware for protecting admin routes based on user roles.
- Created various scripts for database management, including user creation and connection testing.
- Defined TypeScript types for NextAuth to include user roles in session and JWT.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,16 @@
-# Base de Datos
-DATABASE_URL="postgresql://user:password@localhost:5432/ethereal_steps"
+# Database Configuration
+# Replace with your PostgreSQL connection string
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="postgresql://ethereal_user:password@localhost:5432/ethereal_steps"
 
-# NextAuth
+# NextAuth Configuration
+# The URL where your application is hosted (change in production)
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="tu-secreto-super-seguro-aqui-generalo-con-openssl"
 
-# Stripe
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..."
-STRIPE_SECRET_KEY="sk_test_..."
-STRIPE_WEBHOOK_SECRET="whsec_..."
+# NextAuth Secret Key
+# Generate a secure secret with: openssl rand -base64 32
+# IMPORTANT: Use a different secret in production!
+NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl"
 
-# Email (opcional para notificaciones)
-EMAIL_SERVER_HOST="smtp.gmail.com"
-EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USER="tu-email@gmail.com"
-EMAIL_SERVER_PASSWORD="tu-password"
-EMAIL_FROM="noreply@etherealsteps.com"
+# Application Environment
+NODE_ENV="development"
