--- a/package.json
+++ b/package.json
@@ -18,31 +18,38 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.445.0",
     "next": "^14.2.0",
+    "next-auth": "^5.0.0-beta.30",
+    "next-cloudinary": "^6.17.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@prisma/client": "^5.19.0",
-    "next-auth": "^4.24.0",
-    "bcrypt": "^5.1.1",
-    "stripe": "^16.12.0",
-    "zustand": "^4.5.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.445.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.5.0"
+    "stripe": "^16.12.0",
+    "tailwind-merge": "^2.5.0",
+    "zod": "^4.1.12",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/bcrypt": "^5.0.2",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "prisma": "^5.19.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0",
-    "tsx": "^4.7.0"
+    "pg": "^8.16.3",
+    "postcss": "^8.4.0",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.0.0"
   }
 }
